--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "build-storybook": "storybook build",
     "test": "jest",
     "test:watch": "jest --watch",
-    "dev:all": "concurrently \"npm run dev\" \"npm run storybook\""
+    "dev:all": "concurrently \"npm run dev\" \"npm run storybook\"",
+    "analyze": "ANALYZE=true npm run build"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
@@ -38,6 +39,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
+    "react-intersection-observer": "^9.16.0",
     "sass": "^1.75.0",
     "zustand": "^4.5.2"
   },
